fix: apply payment description and fix spacing

--- a/src/Views/Form/Templates/Classic/resources/css/_errors-notices.scss
+++ b/src/Views/Form/Templates/Classic/resources/css/_errors-notices.scss
@@ -58,6 +58,9 @@
 }
 
 // Styes for error and notice types
+#give_error_test_mode {
+    margin-bottom: 0.9rem;
+}
 
 .give_error {
     --color: #ff3c00;
